--- a/testapp/marker_advanced.html
+++ b/testapp/marker_advanced.html
@@ -8,21 +8,37 @@
     .module('ngMapCustom', ['ngMap'])
     .config(function (ngMapConfigProvider) {
       ngMapConfigProvider.useAdvancedMarkerElements = true;
+    })
+    .controller('ngMapCustomController', function ngMapCustomController($scope){
+
+      var ctrl = this;
+
+      var d = document.createElement('div');
+      d.style = "background:red;width:100px;height:50px;color:white;"
+      d.innerHTML = '<b>Custom Content</b>';
+
+      console.log(d);
+
+      $scope.marker = {
+        content: d
+      };
+
     });
 </script>
 </head>
 
-<body ng-app="ngMapCustom">
+<body ng-app="ngMapCustom" ng-controller="ngMapCustomController">
   <ng-map id="map" zoom="11" center="[40.74, -74.18]">
     <marker position="[40.71, -74.21]" title="hello"></marker>
-    <!-- <marker position="[40.72, -74.20]" title="marker" animation="Animation.DROP"></marker> -->
-    <marker position="[40.73, -74.19]" title="drag me" draggable="true"></marker>
-    <!-- <marker position="[40.74, -74.18]" title="how" animation="Animation.BOUNCE"></marker> -->
+    <marker position="[40.72, -74.20]" title="marker"></marker>
+    <marker position="[40.73, -74.19]" title="drag me" gmp-draggable="true"></marker>
+    <marker position="[40.74, -74.18]" title="how"></marker>
     <marker position="[40.75, -74.17]" title="are"></marker>
-    <!-- <marker position="[40.76, -74.16]" title="you"
-      icon="https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png"></marker> -->
+    <marker position="[40.76, -74.16]" title="you" ></marker>
     <marker position="[40.77, -74.15]" title="from"></marker>
     <marker position="[40.78, -74.14]" title="allen"></marker>
   </ng-map>
+
+  BIND:<span ng-bind="marker.content"></span>
 </body>
 </html>
