added svg pin and custom glyph examples

--- a/testapp/marker_advanced.html
+++ b/testapp/marker_advanced.html
@@ -15,16 +15,37 @@
 
       var ctrl = this;
 
+      // img
       const beachFlagImg = document.createElement("img");
       beachFlagImg.src = "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png";
 
+      // custom HTML
       const redDiv = document.createElement('div');
       redDiv.style = "background:red; width:90px; height:15px; color:white;border:1px solid white;text-align:center;";
-      redDiv.innerHTML = '<b>Custom Content</b>';
+      redDiv.innerHTML = '<b>Custom HTML</b>';
+
+      // A marker with a custom inline SVG.
+      const parser = new DOMParser();
+      const pinSvgString =
+        '<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 56 56" fill="none"><rect width="56" height="56" rx="28" fill="#7837FF"></rect><path d="M46.0675 22.1319L44.0601 22.7843" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M11.9402 33.2201L9.93262 33.8723" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M27.9999 47.0046V44.8933" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M27.9999 9V11.1113" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.1583 43.3597L37.9186 41.6532" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M16.8419 12.6442L18.0816 14.3506" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M9.93262 22.1319L11.9402 22.7843" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M46.0676 33.8724L44.0601 33.2201" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.1583 12.6442L37.9186 14.3506" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M16.8419 43.3597L18.0816 41.6532" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M28 39L26.8725 37.9904C24.9292 36.226 23.325 34.7026 22.06 33.4202C20.795 32.1378 19.7867 30.9918 19.035 29.9823C18.2833 28.9727 17.7562 28.0587 17.4537 27.2401C17.1512 26.4216 17 25.5939 17 24.7572C17 23.1201 17.5546 21.7513 18.6638 20.6508C19.7729 19.5502 21.1433 19 22.775 19C23.82 19 24.7871 19.2456 25.6762 19.7367C26.5654 20.2278 27.34 20.9372 28 21.8649C28.77 20.8827 29.5858 20.1596 30.4475 19.6958C31.3092 19.2319 32.235 19 33.225 19C34.8567 19 36.2271 19.5502 37.3362 20.6508C38.4454 21.7513 39 23.1201 39 24.7572C39 25.5939 38.8488 26.4216 38.5463 27.2401C38.2438 28.0587 37.7167 28.9727 36.965 29.9823C36.2133 30.9918 35.205 32.1378 33.94 33.4202C32.675 34.7026 31.0708 36.226 29.1275 37.9904L28 39Z" fill="#FF7878"></path></svg>';
+      const pinSvg = parser.parseFromString(
+        pinSvgString,
+        "image/svg+xml",
+      ).documentElement;
+
+      // A marker with a custom SVG glyph.
+      const glyphImg = document.createElement("img");
+      glyphImg.src =
+        "https://developers.google.com/maps/documentation/javascript/examples/full/images/google_logo_g.svg";
+      const glyphSvgPinElement = new google.maps.marker.PinElement({
+        glyph: glyphImg,
+      });
 
       $scope.contentExamples = {
         html: redDiv,
-        img: beachFlagImg
+        img: beachFlagImg,
+        pinSvg: pinSvg,
+        glyph: glyphSvgPinElement.element
       };
 
     });
@@ -33,14 +54,14 @@
 
 <body ng-app="ngMapCustom" ng-controller="ngMapCustomController">
   <ng-map id="map" zoom="11" center="[40.74, -74.18]">
-    <marker position="[40.71, -74.21]" title="hello"></marker>
-    <marker position="[40.72, -74.20]" title="marker"></marker>
-    <marker position="[40.73, -74.19]" title="drag me" gmp-draggable="true"></marker>
-    <marker position="[40.74, -74.18]" title="how" content="contentExamples.html"></marker>
-    <marker position="[40.75, -74.17]" title="are"></marker>
-    <marker position="[40.76, -74.16]" title="you" content="contentExamples.img"></marker>
-    <marker position="[40.77, -74.15]" title="from"></marker>
-    <marker position="[40.78, -74.14]" title="allen"></marker>
+    <marker position="[40.71, -74.31]" title="Advanced Marker Element using custom SVG glyph" content="contentExamples.glyph"></marker>
+    <marker position="[40.72, -74.27]" title="Advanced Marker Element - no customisation"></marker>
+    <marker position="[40.73, -74.24]" title="Advanced Marker Element - draggable" gmp-draggable="true"></marker>
+    <marker position="[40.74, -74.21]" title="Advanced Marker Element using custom HTML" content="contentExamples.html"></marker>
+    <marker position="[40.75, -74.18]" title="Advanced Marker Element"></marker>
+    <marker position="[40.76, -74.15]" title="Advanced Marker Element using custom PNG image" content="contentExamples.img"></marker>
+    <marker position="[40.77, -74.12]" title="Advanced Marker Element"></marker>
+    <marker position="[40.78, -74.09]" title="Advanced Marker Element using custom inline SVG" content="contentExamples.pinSvg"></marker>
   </ng-map>
 </body>
 </html>
